--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "vercel-build": "npm install $NPM_FLAGS && npm run build"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
@@ -31,7 +30,13 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2",
-    "tippy.js": "^6.3.7"
+    "redux-thunk": "^3.1.0",
+    "tippy.js": "^6.3.7",
+    "redux": "^5.0.1"
+  },
+  "overrides": {
+    "redux-devtools-extension": {
+      "redux": "^5.0.1"
+    }
   }
 }
